# microsoftgraph-python

./: LICENSE  README.md  pyproject.toml  setup.py
microsoftgraph/: calendar.py  client.py  contacts.py  decorators.py  excel.py  exceptions.py  files.py  mail.py  notes.py  onedrive.py  onenote.py  outlook.py  response.py  test.py  users.py  utils.py  webhooks.py  workbooks.py
