[tool.poetry]
name = "microsoftgraph-python"
version = "1.1.6"
description = "API wrapper for Microsoft Graph written in Python"
authors = ["Miguel Ferrer <ingferrermiguel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "microsoftgraph"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

